# UND

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  me.py  pyproject.toml  run.py
.github/workflows/: ci.yml
src/obsidian_note_gen/: __init__.py  cli.py  config.py  core.py  webapp.py
src/obsidian_note_gen/static/: app.js
src/obsidian_note_gen/templates/: index.html
tests/: test_cli.py  test_core.py
