[project]
name = "obsidian-note-gen"
version = "0.1.0"
description = "Two-call Obsidian note generator with a web UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = ["Flask>=3.0"]

[project.scripts]
obsidian-note-gen = "obsidian_note_gen.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ["E701", "E702"]
